# compiler-example-suite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
c2rust/: .gitignore  CMakeLists.txt  cmake_install.cmake  qsort.c  qsort.cpp
clang/: CMakeLists.txt  README.md
clang/bolt/: .gitignore  Makefile  bitonicsort  bitonicsort.reloc  perf.fdata
clang/cuda/: CMakeLists.txt  Makefile
clang/openmp/: .gitignore  CMakeLists.txt  Makefile  code-421209.profraw  code-421502.profraw  code.profdata  default.profraw  mptest.c  mptestload  mptestload.c  mptestload2.c  mptestload3.c  mptestload_f  test  test.txt  test_.txt
clang/openmp_cuda/: CMakeLists.txt  Makefile
clang/openmp_cuda/01_accelQuery/: aclocal.m4  config.h.in  configure
clang/openmp_cuda/01_accelQuery/autom4te.cache/: output.1  requests  traces.1
clang/openmp_cuda/01_accelQuery/docs/: Makefile.in
clang/openmp_cuda/01_accelQuery/src/: Makefile.in
clang/openmp_cuda/01_accelQuery/tests/: Makefile.in
clang/openmp_cuda/02_dataTransRate/: Makefile.in  README.md  configure
clang/openmp_cuda/02_dataTransRate/autom4te.cache/: output.1  requests  traces.0  traces.1
clang/openmp_cuda/02_dataTransRate/src/: Makefile  Makefile.in  dataTransRate
clang/openmp_cuda/02_dataTransRate/tests/: Makefile.in
clang/polly/: CMakeLists.txt  Makefile  mptestload  mptestload.c  mptestload_nomp  polly_mptestload
clang/souper/: .gitignore  Makefile  bitonicsort  mptestload  mptestload.c  sclang_mptestload  test.json
compiler_flags/: .gitignore  README.md  clang_wrapper.py  gcc_opt.py  gcc_wrapper.py  objdump.py  shell.nix
compiler_flags/test/: CMakeLists.txt  example.c  example.plist  gcc_simple_opt.txt  passes.html  simple.bc  simple.c
ispc/examples/portable/genx/pipeline-dpcpp/: ._pipeline-dpcpp.ispc
jlm/: .gitignore  Makefile  jlm_mptestload  mptestload
mpi/: CMakeLists.txt
nvcc/: .gitignore  CMakeLists.txt  README.md
polly/: CMakeLists.txt
src/: bitonicsort.cpp  mpitest.c  mptest.c  mptestload.c  mptestload_nomp.c
src/cuda/: cudatest.cu
src/openmpcuda/: Makefile  check1ns.c  dataTransRate.c
